@@ -1,3 +1,5 @@
+* Avoid setting the `elements` var in client_api() until necessary. [jddalton]
+
 * Make the cache pause timeout equal to the `minCacheRest`. [jddalton]
 
 * Optimize client_api() by avoiding unnecessary property lookups and assignments. [jddalton]
